# ml_world_cup_2026

./: .env_sample  .gitignore  README.md  compose.yaml  main.py  pyproject.toml  random_forest.py  requirements.txt
docker/: Dockerfile
modules/: data_loader.py  data_processor.py
tests/: test_random_forest.py
