[project]
name = "world-cup-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "kaggle>=2.2.1",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
